# lake-sift

./: .gitattributes  .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: smoke-action.yml
examples/deployment-gate/: README.md  deployment-gate.yml  model_new.sql  model_old.sql  run_gate.py
examples/github-actions/: parquet-pr-check.yml  wap-gate.yml
src/lakesift/: __init__.py  _sql.py  audit.py  cli.py  core.py  preview.py  result.py
src/lakesift/render/: __init__.py  _shared.py  human.py  json_render.py  markdown.py
src/lakesift/sources/: __init__.py  _deps.py  base.py  delta.py  iceberg.py  parquet.py  sql.py
src/lakesift/web/: __init__.py  app.py  environment.py  runner.py  server.py  store.py
src/lakesift/web/templates/: base.html  environment.html  new_run.html  not_found.html  run_detail.html  runs.html
tests/: EXAMPLES.md  test_audit.py  test_cli.py  test_delta.py  test_deployment_gate.py  test_diff.py  test_iceberg.py  test_markdown.py  test_preview.py  test_pushdown.py  test_render.py  test_schema_only.py  test_sql_schema.py  test_web.py
