[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lake-sift"
version = "0.1.0.dev0"
description = "값 단위(value-level) 데이터 diff — 두 Parquet 파일을 Spark·웨어하우스 없이 셀 단위로 비교"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "JeonDaehong", email = "daehong770@gmail.com" }]
keywords = ["diff", "parquet", "duckdb", "data", "lakehouse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dependencies = [
    "duckdb>=0.10",
    "pyarrow>=14",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
lake-sift = "lakesift.cli:app"

[project.urls]
Homepage = "https://github.com/JeonDaehong/lake-sift"
Repository = "https://github.com/JeonDaehong/lake-sift"

[tool.hatch.build.targets.wheel]
packages = ["src/lakesift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
