[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lake-sift"
version = "0.4.0"
description = "Value-level data diff for the lakehouse — compare Parquet, Iceberg, and Delta down to the cell, no Spark or warehouse"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "JeonDaehong", email = "daehong770@gmail.com" }]
keywords = ["diff", "parquet", "iceberg", "delta", "duckdb", "data", "lakehouse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dependencies = [
    "duckdb>=0.10",
    "pyarrow>=14",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
iceberg = ["pyiceberg>=0.7"]
delta = ["deltalake>=0.17"]
dev = ["pytest>=8", "pyiceberg[sql-sqlite]>=0.7", "deltalake>=0.17"]

[project.scripts]
lake-sift = "lakesift.cli:app"

[project.urls]
Homepage = "https://github.com/JeonDaehong/lake-sift"
Repository = "https://github.com/JeonDaehong/lake-sift"

[tool.hatch.build.targets.wheel]
packages = ["src/lakesift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
